samples/_failures_safe/1761156589_659c71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63513891.c: In function ‘dfs’:
./samples/SAFE/__tmp_63513891.c:163:12: error: expected identifier or ‘(’ at end of input
  163 |     struct Node*
      |            ^~~~
./samples/SAFE/__tmp_63513891.c:163:12: error: expected declaration or statement at end of input
